--- a/index.html
+++ b/index.html
@@ -24,43 +24,38 @@
   <section class="content">
     <div class="imagem-lado-texto">
       <img src="bullying logo.png" alt="Logo Bullying">
-      <div class="texto">
-        <h2>O que é Bullying?</h2>
-        <p>
-          Bullying é um comportamento agressivo e repetitivo que pode causar danos físicos e emocionais às vítimas.
-          Pode acontecer em escolas, ambientes de trabalho e até mesmo online.
-        </p>
-<BR>
-        <h3>Resumo do projeto durante o ano...</h3>
-      <p>
-  → O ponto de partida do projeto foi o filme <b><a href="https://www.youtube.com/watch?v=qacQrxVl0Xo" target="_blank">Um Sonho Possível (2009)</a></b>, baseado em uma história real.  
-  O filme acompanha Michael Oher, um adolescente sem-teto e traumatizado que é acolhido por Leigh Anne Tuohy e sua família.  
-  Com o apoio e amor incondicional dos Tuohy, Michael encontra estabilidade, desenvolve seu potencial atlético e acadêmico,  
-  e se torna um dos jogadores de futebol americano mais promissores dos Estados Unidos.  
-  A relação transforma tanto a vida de Michael quanto da família que o acolheu.
-</p>
+<div class="texto" style="text-align: justify;">
+  <h2>O que é Bullying?</h2>
+  <p>
+    Bullying é um comportamento agressivo e repetitivo que pode causar danos físicos e emocionais às vítimas.
+    Pode acontecer em escolas, ambientes de trabalho e até mesmo online.
+  </p>
+  <br>
+  <h3>Resumo do projeto durante o ano...</h3>
+  <p>
+    → O ponto de partida do projeto foi o filme <b><a href="https://www.youtube.com/watch?v=qacQrxVl0Xo" target="_blank">Um Sonho Possível (2009)</a></b>, baseado em uma história real.  
+    O filme acompanha Michael Oher, um adolescente sem-teto e traumatizado que é acolhido por Leigh Anne Tuohy e sua família.  
+    Com o apoio e amor incondicional dos Tuohy, Michael encontra estabilidade, desenvolve seu potencial atlético e acadêmico,  
+    e se torna um dos jogadores de futebol americano mais promissores dos Estados Unidos.  
+    A relação transforma tanto a vida de Michael quanto da família que o acolheu.
+  </p>
+  <p>
+    → Após isso, fizemos um Quiz com perguntas referentes ao filme utilizando nossos conhecimentos em programação.
+  </p>
+  <p>
+    &#10067;&#129504;&nbsp;<a href="./quiz em html/index.html" target="_blank">Quiz sobre o Filme feito pelos integrantes.</a>
+  </p>
+  <p>
+    → A etapa seguinte foi questionar sobre o Bullying e seus efeitos a longo prazo e fazer um aprofundamento sobre o tema através de vídeos.
+  </p>
+  <p>
+    → Depois, ouvimos e tiramos dúvidas em nossa comunidade de aprendizagem com autoridades sobre o assunto.
+  </p>
+  <p>
+    → Por fim, fizemos a nossa conclusão sobre o projeto e colocamos nesse site.
+  </p>
+</div>
 
-
-
-<p>
-  → Após isso, fizemos um Quiz com perguntas referentes ao filme utilizando nossos conhecimentos em programação.
-
-
-   &#10067;&#129504;&nbsp;<a href="./quiz em html/index.html" target="_blank">Quiz sobre o Filme feito pelos integrantes.</a>
-
-<p>
-  → A etapa seguinte foi questionar sobre o Bullying e seus efeitos a longo prazo e fazer um aprofundamento sobre o tema através de vídeos.
-</p>
-
-<p>
-  → Depois, ouvimos e tiramos dúvidas em nossa comunidade de aprendizagem com autoridades sobre o assunto.
-</p>
-
-<p>
-  → Por fim, fizemos a nossa conclusão sobre o projeto e colocamos nesse site.
-</p>
-
-      </div>
     </div>
   </section>
 </main>
