--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     Pode acontecer em escolas, ambientes de trabalho e até mesmo online.
   </p>
   <br>
-  <h3>Resumo do projeto durante o ano...</h3>
+  <h3>Resumo do projeto...</h3>
   <p>
     → O ponto de partida do projeto foi o filme <b><a href="https://www.youtube.com/watch?v=qacQrxVl0Xo" target="_blank">Um Sonho Possível (2009)</a></b>, baseado em uma história real.  
     O filme acompanha Michael Oher, um adolescente sem-teto e traumatizado que é acolhido por Leigh Anne Tuohy e sua família.  
