--- a/index.html
+++ b/index.html
@@ -8,16 +8,83 @@
    
 </head>
 <body>
- <header class="header-estilizado">
-  <div class="container">
-    <img src="logos.png" alt="Imagem sobre bullying" class="imagem">
-    <div class="texto">
-      <h1 class="texto-estilizado">Bullying: Um Problema Real</h1>
-      <h3 class="texto-estilizado">Projeto de Informática sobre o Bullying - FCC e PUFV 2025</h3>
-      <h3 class="texto-estilizado">Entenda os efeitos e como combater o bullying.</h3>
+  <header class="header-estilizado">
+    <div class="container">
+      <img src="logos.png" alt="Imagem sobre bullying" class="imagem">
+      
+      <div class="texto">
+        <h1 class="texto-estilizado">Bullying: Um Problema Real</h1>
+        <h3 class="texto-estilizado">Projeto de Informática sobre o Bullying - FCC e PUFV 2025</h3>
+        <h3 class="texto-estilizado">Entenda os efeitos e como combater o bullying.</h3>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f4f4f4;
+    color: #222;
+  }
+
+  .header-estilizado {
+    background: linear-gradient(to right, #ffffff, #ffffff); /* azul -> roxo */
+    padding: 2rem 1rem;
+    text-align: center;
+  }
+
+  .container {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 1rem;
+  }
+
+  .imagem {
+    max-width: 100%;
+    height: auto;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
+    transition: transform 0.3s ease;
+    border-style:dashed;
+    border-color: #058bf9;
+  }
+
+  .imagem:hover {
+    transform: scale(1.03);
+  }
+
+  .texto {
+    margin-top: 2rem;
+  }
+
+  .texto-estilizado {
+    color: #042c4d;
+    margin-bottom: 1rem;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  }
+
+@media (max-width: 768px) {
+  .texto h1 {
+    font-size: 1.7rem;
+  }
+
+  .texto h3 {
+    font-size: 1rem;
+  }
+
+  .imagem {
+    margin: 0.5rem auto;
+    display: block;
+  }
+}
+
+</style>
+
 
 
   <main>
