--- a/index.html
+++ b/index.html
@@ -321,10 +321,12 @@
         <li>Em casos extremos, pode levar ao suicídio</li>
       </ul>
       <p></p><br>
-     <video autoplay muted loop playsinline class="bg-video" width="100%" height="auto" controls>
-  <source src="./ana tv.mp4" type="video/mp4">
+      <video autoplay muted loop playsinline controls
+  class="bg-video"
+  width="600"  <!-- ou outro valor em px ou % -->
+  style="border-radius: 15px; display: block; margin: 0 auto;">
+  <source src="ana tv.mp4" type="video/mp4">
 </video>
-    </section>
 
     <section class="content">
       <h2>Como podemos ajudar a combater o Bullying</h2>
