--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     
     <img src="logos.png" alt="Imagem sobre bullying" class="imagem">
-    <img src="voador.png" class="voador" alt="Imagem voadora">
+    <img src="voadora.gif" class="voador" alt="Imagem voadora">
   
 
     <div class="texto">
