--- a/index.html
+++ b/index.html
@@ -132,7 +132,25 @@
     margin: 0.5rem auto;
     display: block;
   }
-}
+}   .link-bonito {
+      display: inline-block;
+      padding: 12px 20px;
+      border: 2px solid #0424f4;
+      border-radius: 8px;
+      text-decoration: none;
+      color: #0ad9f5;
+      font-weight: bold;
+      font-family: 'Segoe UI', sans-serif;
+      transition: all 0.3s ease;
+      background-color: #f9f9f9;
+    }
+
+    .link-bonito:hover {
+      background-color: #072ff9;
+      color: white;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      transform: scale(1.05);
+    }
 
 </style>
 
@@ -162,7 +180,9 @@
     → Após isso, fizemos um Quiz com perguntas referentes ao filme utilizando nossos conhecimentos em programação.
   </p>
   <p>
-    &#10067;&#129504;&nbsp;<a href="./quiz em html/index.html" target="_blank">Quiz sobre o Filme feito pelos integrantes.</a>
+    <a href="./quiz em html/index.html" target="_blank" class="link-bonito">
+    &#10067;&#129504;&nbsp;Quiz sobre o Filme feito pelos integrantes.
+  </a>
   </p>
   <p>
     → A etapa seguinte foi questionar sobre o Bullying e seus efeitos a longo prazo e fazer um aprofundamento sobre o tema através de vídeos.
