--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
       background-color: #072ff9;
       color: white;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      transform: scale(1.05);
+      transform: scale(1.1);
+      text-decoration: none;
+      
+
     }
 
 </style>
@@ -181,8 +184,11 @@
   </p>
   <p>
    <br>
-    <a href="./quiz em html/index.html" target="_blank" class="link-bonito">
-    &#10067;&#129504;&nbsp;Quiz sobre o Filme feito pelos integrantes.
+    <div style="text-align: center;">
+  <a href="./quiz em html/index.html" target="_blank" class="link-bonito">
+    &#10067;&nbsp;Quiz sobre o Filme feito pelos integrantes.&nbsp;&#129504;
+  </a>
+</div>
   </a>
    
   </p>
