--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
   </main>
 
   <footer>
-    <p>&copy Projeto sobre o Bullying FCC/PUFV - Turmas de Informática 2025</p>
+    <p>&copy Desenvolvido pela Turma de Informática – 2025 | Projeto sobre o Bullying – FCC/PUFV</p>
   </footer>
 
   <script src="script.js"></script>
