--- a/index.html
+++ b/index.html
@@ -499,12 +499,12 @@ window.addEventListener('DOMContentLoaded', function () {
       if (contadorCliques === 1) {
         alert('Oi, tudo bem? Eu sou a simpática abelhinha do Programa A União Faz a Vida.');
       } else if (contadorCliques === 2) {
-        alert('Seja bem vindo ao nosso site!!!');
+        alert('Que legal te conhecer! Seja bem vindo(a) ao nosso site!!!');
       } else if (contadorCliques === 3) {
-        alert('Que legal te conhecer! Boa navegação pelo site!!!');
+        alert('Esse projeto foi realizado com muito carinho pelos integrantes de Informática da FCC.');
       } else {
         // Para cliques além do terceiro, repetir a última mensagem
-        alert('Que legal te conhecer! Boa navegação pelo site!!!');
+        alert('Esse projeto foi realizado com muito carinho pelos integrantes de Informática da FCC.');
       }
     });
   } else {
