--- a/index.html
+++ b/index.html
@@ -500,12 +500,16 @@ window.addEventListener('DOMContentLoaded', function () {
     if (contadorCliques === 1) {
       Swal.fire('Oi, tudo bem?', 'Eu sou a simpática abelhinha do Programa A União Faz a Vida.', 'info');
     } else if (contadorCliques === 2) {
-      Swal.fire('Que legal te conhecer!', 'Seja bem-vindo(a) ao nosso site!!!', 'success');
+      Swal.fire('Que legal te conhecer!', 'Seja bem-vindo(a) ao nosso site!!!', 'info');
     } else if (contadorCliques === 3) {
-      Swal.fire('Sobre o Projeto', 'Esse projeto foi realizado com muito carinho pelos integrantes de Informática da FCC.', 'info');
+      Swal.fire('Você sabia?','O Programa A União Faz a Vida e a FCC são parceiros desde 2016...', 'info');
+      } else if (contadorCliques === 4) {
+      Swal.fire('Muitos Projetos','Ao longo desse tempo, já foram realizados muitos projetos por essa parceria de sucesso', 'info');
+    } else if (contadorCliques === 5) {
+      Swal.fire('Sobre esse Projeto', 'Esse Projeto sobre o Bullying que é um problema tão preocupante, foi realizado com muito carinho pelos integrantes de Informática da FCC.', 'info');
     } else {
       // Para cliques além do terceiro, repetir a última mensagem
-      Swal.fire('Sobre o Projeto', 'Esse projeto foi realizado com muito carinho pelos integrantes de Informática da FCC.', 'info');
+      Swal.fire('Sobre esse Projeto', 'Esse Projeto sobre o Bullying que é um problema tão preocupante, foi realizado com muito carinho pelos integrantes de Informática da FCC.', 'info');
     }
   });
   } else {
